--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,7 +1,7 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2011.4 >> 2013-03-06
+ClanSphere 2011.4 R1 >> 2013-03-08
 ___________________________________________________________
 
 -- Recommended PHP version changed to 5.4.12
@@ -16,7 +16,6 @@ ___________________________________________________________
    The ckeditor mod can be found in the module db from now on
 -> Removed version and icon requirements from games mod (hajo)
 -> Reworked users manage name search to allow for page turns (hajo)
--> Updated jQuery to 1.9.1
 
 
 ClanSphere 2011.3 Patch 4 >> 2013-01-28
