--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,12 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2011.4 Patch 1 >> 2013-XX-XX
+___________________________________________________________
+
+-> Fixed users manage page switch not working in some cases (hajo)
+
+
 ClanSphere 2011.4 R1 >> 2013-03-08
 ___________________________________________________________
 
