--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,7 +10,7 @@ ___________________________________________________________
 -> Added board repair page to fix metadata issues caused by delete operations (hajo)
    Also helps to fix wrong data if your initial ClanSphere version is older than 2011
 -> Fixed boardvotes not usable on different accounts due to same ip (tom08)
--> Fixed votes navlist random sort not used with mysqli
+-> Fixed votes navlist random sort not used with mysqli (hajo)
 
 
 ClanSphere 2011.4.1 >> 2013-05-20
