--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,6 +5,8 @@ ClanSphere 2011.4.5 >> 2014-xx-xx
 ___________________________________________________________
 
 -> Added captcha switch (clansphere standard, recaptcha and are you a human) (jam2)
+-> Add id on events/navcal-Navlist (tom08)
+-> Add fallback for users_msn on users/edit and users/profile. Please update your custom themes! (tom08)
 
 
 ClanSphere 2011.4.4 R2 >> 2014-05-04
