--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,7 +8,7 @@ ___________________________________________________________
 -> Add id on events/navcal-Navlist (tom08)
 -> Add fallback for users_msn on users/edit and users/profile. Please update your custom themes! (tom08)
 -> Introduce a repository for languages (https://github.com/ClanSphere/Languages), with a Slovak Translation (thx to callus) (tom08)
--> Fix removed banner re upload image with same filetype on banner/edit (tom08)
+-> Fixed problem with directly removed new uploaded banner on edit if banner has same filetype as previous banner (tom08)
 
 
 ClanSphere 2011.4.4 R2 >> 2014-05-04
